@@ -9,6 +9,7 @@ Released ????? ??, ????
 - Spain fix (dr-p)
 - Netherlands fix (RooieRakkert)
 - Switzerland fixes (cgrigis)
+- Germany fix (MikeTsenatek)
 - Added korean_cal attribute to Korea and Vietnam (seriousran, pelennor)
 - United States fixes (patrick-nicholson, dr-p)
 
